feat: add totalDonations attribute to rest project
