# src/main/java/org/hackaton/kotikota/endpoint/rest/mapper/ProjectMapper.java
@@ -3,11 +3,14 @@ package org.hackaton.kotikota.endpoint.rest.mapper;
 import java.util.Objects;
 import lombok.AllArgsConstructor;
 import org.hackaton.kotikota.endpoint.rest.model.Project;
+import org.hackaton.kotikota.endpoint.rest.model.CreateProject;
+import org.hackaton.kotikota.service.ProjectTransactionService;
 import org.springframework.stereotype.Component;
 
 @AllArgsConstructor
 @Component
 public class ProjectMapper {
+  private final ProjectTransactionService projectTransactionService;
   public Project toRest(org.hackaton.kotikota.repository.model.Project domain) {
     return new Project()
         .id(domain.getId())
@@ -17,10 +20,11 @@ public class ProjectMapper {
         .deadline(domain.getDeadline())
         .status(domain.getStatus())
         .health(domain.getHealth())
-        .targetAmount(domain.getTargetAmount());
+        .targetAmount(domain.getTargetAmount())
+        .totalDonations(projectTransactionService.countTotalDonationsBy(domain.getId()));
   }
 
-  public org.hackaton.kotikota.repository.model.Project toDomain(Project rest) {
+  public org.hackaton.kotikota.repository.model.Project toDomain(CreateProject rest) {
     return org.hackaton.kotikota.repository.model.Project.builder()
         .id(rest.getId())
         .name(rest.getName())
